--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,16 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -115,6 +125,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.subash.user.management.UserManagementApplication</mainClass>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -132,11 +145,14 @@
                     <inputSpec>${project.basedir}/src/main/resources/openapi.yaml</inputSpec>
                     <generatorName>spring</generatorName>
                     <output>${project.build.directory}/generated-sources/openapi</output>
-                    <apiPackage>com.subash.user.management.controller</apiPackage>
                     <modelPackage>com.subash.user.management.model</modelPackage>
+                    <generateApiTests>false</generateApiTests>
+                    <generateApis>false</generateApis>
+                    <generateSupportingFiles>false</generateSupportingFiles>
+                    <generateApiDocumentation>false</generateApiDocumentation>
                     <configOptions>`
                         <skipDefaultInterface>true</skipDefaultInterface>
-                        <interfaceOnly>true</interfaceOnly>
+                        <interfaceOnly>false</interfaceOnly>
                         <delegatePattern>false</delegatePattern>
                         <dateLibrary>java21</dateLibrary>
                         <useJakartaEe>true</useJakartaEe>
