Swagger docs, ui enabled and actuator endpoints are enabled for metrics, health,info.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,3 +26,12 @@ print:
     enable:
       request: true
       response: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, prometheus
+  endpoint:
+    health:
+      show-details: always
