--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version> <!-- Check for latest -->
+        </dependency>
     </dependencies>
 
     <build>
