--- a/pom.xml
+++ b/pom.xml
@@ -86,12 +86,6 @@
         </dependency>
 
         <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-models</artifactId>
-            <version>2.2.27</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>1.5.5.Final</version>
@@ -161,13 +155,12 @@
                     <generateApis>false</generateApis>
                     <generateSupportingFiles>false</generateSupportingFiles>
                     <generateApiDocumentation>false</generateApiDocumentation>
-                    <configOptions>`
+                    <configOptions>
                         <skipDefaultInterface>true</skipDefaultInterface>
                         <interfaceOnly>false</interfaceOnly>
                         <delegatePattern>false</delegatePattern>
                         <dateLibrary>java21</dateLibrary>
                         <useJakartaEe>true</useJakartaEe>
-                        <apiName>Users</apiName>
                         <useTags>true</useTags>
                     </configOptions>
                 </configuration>
