--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,10 +2,11 @@ spring:
   application:
     name: user-management
 
+  #Updated the datasource properties as per DB details
   datasource:
     url: jdbc:postgresql://localhost:5432/mutual_fund_management
     username: postgres
-    password: 3112
+    password:
     driver-class-name: org.postgresql.Driver
 
   jackson:
@@ -14,9 +15,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
+        show_sql: false
         dialect: org.hibernate.dialect.PostgreSQLDialect
 server:
   port: 8080
